--- a/public/index.html
+++ b/public/index.html
@@ -643,7 +643,7 @@
 
   <div style="margin-top:10px;">
     <button id="my-profile-save"   type="button" style="background:#3b82f6; color:#fff; border:none; padding:6px 10px; border-radius:6px; cursor:pointer;">저장</button>
-    <button id="my-profile-cancel" type="button" style="margin-left:6px; border:1px solid #ddd; padding:6px 10px; border-radius:6px; cursor:pointer;">닫기</button>
+    <button id="my-profile-cancel" type="button" style="background:#3b82f6; margin-left:6px; border:1px solid #ddd; padding:6px 10px; border-radius:6px; cursor:pointer;">닫기</button>
   </div>
 </div>
 
@@ -1218,11 +1218,12 @@ function toggleProfilePanel(forceOpen) {
 
 
 // 입력칸 채우기
+// 입력칸 채우기
 async function fillMyProfileForm() {
   const { data: { user } } = await window.supabaseClient.auth.getUser();
   if (!user) return;
 
-  // 프로필에서 기본 정보 가져오기
+  // 프로필에서만 읽음 (saju_counts로 절대 떨어지지 않음)
   const { data: profile, error } = await window.supabaseClient
     .from("profiles")
     .select("nickname, phone, grade, daily_limit, daily_usage_count")
@@ -1230,49 +1231,36 @@ async function fillMyProfileForm() {
     .maybeSingle();
   if (error) console.warn('[profile] load error', error);
 
-  // 이메일은 auth.user에서
+  // 이메일은 auth.user
   const email = user.email || "";
 
-  // 값 반영
-  const nickEl   = document.getElementById("my-nickname");
-  const emailEl  = document.getElementById("my-email");
-  const phoneEl  = document.getElementById("my-phone");
-  const gradeEl  = document.getElementById("my-grade");
-  const countEl  = document.getElementById("my-daily-count");
+  // DOM 반영
+  const nickEl  = document.getElementById("my-nickname");
+  const emailEl = document.getElementById("my-email");
+  const phoneEl = document.getElementById("my-phone");
+  const gradeEl = document.getElementById("my-grade");
+  const countEl = document.getElementById("my-daily-count");
 
-  if (nickEl) {
-    const nickVal = profile?.nickname ?? "";
-    nickEl.value = nickVal;
-    // 닉네임이 없을 때만 안내 멘트를 placeholder로
-    nickEl.placeholder = nickVal.trim()
-      ? "닉네임은 한 번 더 등록해주세요"
-      : "닉네임은 한 번 더 등록해주세요";
-  }
-
+  if (nickEl)  nickEl.value  = profile?.nickname ?? "";
   if (emailEl) {
     emailEl.value = email;
-    emailEl.readOnly = true; // 이메일 수정 불가
+    emailEl.readOnly = true;             // 이메일은 확인만
+    emailEl.style.background = "#f3f3f3";
   }
-
   if (phoneEl) phoneEl.value = profile?.phone ?? "";
 
   const used  = profile?.daily_usage_count ?? 0;
   const limit = profile?.daily_limit ?? 0;
+
   if (gradeEl) gradeEl.textContent = profile?.grade ?? "-";
   if (countEl) countEl.textContent = limit ? `${used}/${limit}` : `${used}/-`;
 
-  // ※ 플랜 B: 일일 카운트/리밋이 saju_counts에 있을 경우 보정
-  if (!limit) {
-    const { data: sc } = await window.supabaseClient
-      .from("saju_counts")
-      .select("used_today, daily_limit")
-      .eq("user_id", user.id)
-      .maybeSingle();
-    const used2 = sc?.used_today ?? used;
-    const lim2  = sc?.daily_limit ?? limit;
-    if (countEl) countEl.textContent = lim2 ? `${used2}/${lim2}` : `${used2}/-`;
+  // 닉네임 placeholder 안내(값 없을 때만)
+  if (nickEl && !nickEl.value) {
+    nickEl.placeholder = "닉네임은 한 번 더 등록해주세요.";
   }
 }
+
 
 
 // 저장
