--- a/public/index.html
+++ b/public/index.html
@@ -847,7 +847,7 @@
   <div id="container"></div>  <!-- ✅ 여기에 출력 -->
 <!-- EmailJS SDK 추가 -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-<script type="module" src="app.js?v=20250929-03"></script>
+<script type="module" src="/app.js?v=20250929-03"></script>
 
 <script>
   const buttons = document.querySelectorAll("#sajuSubmit, #sinsalBtn");
