--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -3,6 +3,7 @@
 //               git push origin main
 //               git push
 //               강제실행   vercel --prod --force
+
 -->
 <!DOCTYPE html>
 <html lang="ko">
@@ -847,7 +848,7 @@
   <div id="container"></div>  <!-- ✅ 여기에 출력 -->
 <!-- EmailJS SDK 추가 -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-<script type="module" src="app.js"></script>
+<script type="module" src="/app.js?v=20250929-03"></script>
 
 <script>
   const buttons = document.querySelectorAll("#sajuSubmit, #sinsalBtn");
